--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,277 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*, 
+*::before, 
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+/** basic page setup **/
+@page {
+  size: 8.5in 11in; /* width height */
+  size: letter;
+  margin-top: 0.625in;
+  margin-right: 0.625in;
+  margin-bottom: 1.2405in;
+  margin-left: 0.625in;
+  orphans: 2;
+  widows: 2;
+}
+
+html,p,ul,ol,li,span {
+  font: 9pt/1.25 "Gentona Book", GentonaBook, "Gentona", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-weight: 300;
+}
+
+body {
+  font-size: 1rem;
+}
+
+html,
+body {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+ul,ol {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 1.5rem;
+}
+
+/** helps show things are working temporarily **/
+.presentation {
+  /* border: 1px solid;
+  margin: 3em;
+  padding: 2em; */
+  page-break-after: always;
+}
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+h1 {
+  font-size: 1.25rem;
+}
+
+h2, h3, h4, h5, h6 {
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Gentona Book", GentonaBook, "Gentona", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  page-break-after: avoid;
+  font-weight: 700;
+}
+
+h2 {
+  page-break-after: avoid;
+}
+
+/** trying to layout some things **/
+article {
+  width: 100%;
+  position: relative;
+  display:flex;
+  flex-flow: row wrap;
+}
+
+article h1 {
+  width: 100%;
+  flex: auto;
+  margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid;
+}
+
+article aside {
+  width: 25%;
+  flex: 1;
+  padding-right: .75rem;
+}
+
+article abstract {
+  width: 75%;
+  flex: 3;
+  padding-left: .75rem;
+}
+
+/** try to design up the asides section **/
+
+article aside > div {
+  border-bottom: 1px solid;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+}
+
+article abstract section {
+  margin-bottom: 1rem;
+  break-inside: avoid-page;
+}
+
+article abstract ul,
+article abstract ol {
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
+article abstract p + p {
+  text-indent: 2rem;
+}
+
+
+/** do I need this in the print media declaration? **/
+
+@media print {
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+  *, 
+  *::before, 
+  *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+  }
+  
+  
+  
+  /** basic page setup **/
+  @page {
+    size: 8.5in 11in; /* width height */
+    size: letter;
+    margin-top: 0.625in;
+    margin-right: 0.625in;
+    margin-bottom: 1.2405in;
+    margin-left: 0.625in;
+    orphans: 2;
+    widows: 2;
+  }
+  
+  html,p,ul,ol,li,span {
+    font: 9pt/1.25 "Gentona Book", GentonaBook, "Gentona", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+    font-weight: 300;
+  }
+  
+  body {
+    font-size: 1rem;
+  }
+  
+  html,
+  body {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  ul,ol {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 1.5rem;
+  }
+  
+  /** helps show things are working temporarily **/
+  .presentation {
+    /* border: 1px solid;
+    margin: 3em;
+    padding: 2em; */
+    page-break-after: always;
+  }
+  
+  @media print {
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  }
+  
+  h1 {
+    font-size: 1.25rem;
+  }
+  
+  h2, h3, h4, h5, h6 {
+    font-size: 1rem;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Gentona Book", GentonaBook, "Gentona", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    page-break-after: avoid;
+    font-weight: 700;
+  }
+  
+  /** trying to layout some things **/
+  article {
+    width: 100%;
+    position: relative;
+    display:flex;
+    flex-flow: row wrap;
+  }
+  
+  article h1 {
+    width: 100%;
+    flex: auto;
+    margin-bottom: 2em;
+  }
+  
+  article aside {
+    width: 25%;
+    flex: 1;
+    padding-right: .75rem;
+  }
+  
+  article abstract {
+    width: 75%;
+    flex: 3;
+    padding-left: .75rem;
+  }
+  
+  /** try to design up the asides section **/
+  
+  article aside > div {
+    border-bottom: 1px solid;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+  }
+  
+  article abstract section {
+    margin-bottom: 1rem;
+  }
+  
+  article abstract ul,
+  article abstract ol {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+  }
+  
+  article abstract p + p {
+    text-indent: 2rem;
+  }
+  
+  
+}
